@@ -1,6 +1,8 @@
 import org.jetbrains.compose.desktop.application.dsl.TargetFormat
+import org.jetbrains.kotlin.gradle.dsl.JvmTarget
 
 val ktorVer = "3.0.1"
+//val nav_version = "2.8.5"
 
 plugins {
     kotlin("jvm")
@@ -23,19 +25,33 @@ dependencies {
     // (in a separate module for demo project and in testMain).
     // With compose.desktop.common you will also lose @Preview functionality
     implementation(compose.desktop.currentOs)
+    implementation("androidx.compose.material:material-icons-extended:1.7.6")
+    implementation("org.jetbrains.androidx.navigation:navigation-compose:2.8.0-alpha10")
     implementation("io.ktor:ktor-client-core:$ktorVer")
     implementation("io.ktor:ktor-client-cio:$ktorVer")
     implementation("io.ktor:ktor-client-websockets:$ktorVer")
+    testImplementation("org.jetbrains.kotlin:kotlin-test-junit:1.5.31")
+    testImplementation("io.mockk:mockk:1.12.0")
+    testImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-test:1.9.0")
 }
 
-compose.desktop {
-    application {
-        mainClass = "com.koisv.koichatcfd.MainKt"
+tasks {
+    compileKotlin {
+        compilerOptions.jvmTarget.set(JvmTarget.JVM_22)
+    }
+    compose.desktop {
+        application {
+            mainClass = "com.koisv.koichatcfd.MainKt"
 
-        nativeDistributions {
-            targetFormats(TargetFormat.Dmg, TargetFormat.Msi, TargetFormat.Deb)
-            packageName = "koichatcfd"
-            packageVersion = "1.0.0"
+            nativeDistributions {
+                targetFormats(TargetFormat.Dmg, TargetFormat.Exe, TargetFormat.Deb)
+                packageName = "koichatcfd"
+                packageVersion = "1.0.0"
+            }
         }
+    }
+    test {
+// previous JVM options
+        jvmArgs("-noverify", "-XX:+EnableDynamicAgentLoading", "-Djdk.instrument.traceUsage") // add this
     }
 }
